--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -16,6 +16,21 @@ body {
      padding: 20px;
 }
 
+p {
+     font-variant: small-caps;
+}
+
+#project1 {
+     font-variant: small-caps;
+}
+
+.project {
+     margin-left: 20px;
+}
+
+.project p {
+     font-variant: small-caps;
+}
 .jumbotron {
 	position: relative;
 	background: none;
